--- a/content/posts/2018-05-25-testing-1-8-2.md
+++ b/content/posts/2018-05-25-testing-1-8-2.md
@@ -1,10 +1,16 @@
 ---
-title: Post Three
 template: SinglePost
+title: Oakland CA
 status: Published
 date: '2018-05-25'
-featuredImage: /images/uploads/isabella-juskova.jpg
-excerpt: This is placeholder text that our web designers put here to make sure words appear properly on your website. This text is going to be replaced once the website is completed. You are currently reading text that is written in English, not any other language.
+featuredImage: /images/uploads/oak-1.png
+excerpt: >-
+  This is placeholder text that our web designers put here to make sure words
+  appear properly on your website. This text is going to be replaced once the
+  website is completed. You are currently reading text that is written in
+  English, not any other language.
+categories:
+  - category: Hotels
 ---
 
 This is placeholder text that our web designers put here to make sure words appear properly on your website. This text is going to be replaced once the website is completed. You are currently reading text that is written in English, not any other language.
